/*
Copyright 2024 Nokia.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package github.com.kuidio.kuid.apis.backend.extcomm.v1alpha1;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/kuidio/kuid/apis/backend/as/v1alpha1/generated.proto";
import "github.com/kuidio/kuid/apis/common/v1alpha1/generated.proto";
import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option (gogoproto.marshaler_all) = true;
option (gogoproto.stable_marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_getters_all) = false;
option go_package = "github.com/kuidio/kuid/apis/backend/extcomm/v1alpha1";

message Condition {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.Condition condition = 1 [(gogoproto.customname) = "Condition", (gogoproto.nullable) = false];
}

message ConditionedStatus {
  // Conditions of the resource.
  // +optional
  // +listType:=map
  // +listMapKey:=type
  repeated .github.com.kuidio.kuid.apis.backend.as.v1alpha1.Condition conditions = 1 [(gogoproto.customname) = "Conditions", (gogoproto.nullable) = false];
}

// +genclient
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
// +kubebuilder:object:root=true
// +kubebuilder:subresource:status
// +kubebuilder:resource:categories={kuid}
// EXTCOMMClaim is the Schema for the EXTCOMMClaim API
message EXTCOMMClaim {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1 [(gogoproto.customname) = "ObjectMeta", (gogoproto.nullable) = false];

  optional EXTCOMMClaimSpec spec = 2 [(gogoproto.customname) = "Spec", (gogoproto.nullable) = false];

  optional EXTCOMMClaimStatus status = 3 [(gogoproto.customname) = "Status", (gogoproto.nullable) = false];
}

// EXTCOMMClaimList contains a list of EXTCOMMClaims
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
message EXTCOMMClaimList {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1 [(gogoproto.customname) = "ListMeta", (gogoproto.nullable) = false];

  repeated EXTCOMMClaim items = 2 [(gogoproto.customname) = "Items", (gogoproto.nullable) = false];
}

// EXTCOMMClaimSpec defines the dEXTCOMMred state of EXTCOMMClaim
message EXTCOMMClaimSpec {
  // EXTCOMMIndex defines the EXTCOMM index for the EXTCOMM Claim
  optional string index = 1 [(gogoproto.customname) = "Index", (gogoproto.nullable) = false];

  // EXTCOMMID defines the EXTCOMM for the EXTCOMM claim
  optional uint64 id = 2 [(gogoproto.customname) = "ID"];

  // Range defines the EXTCOMM range for the EXTCOMM claim
  // The following notation is used: start-end <start-EXTCOMMID>-<end-EXTCOMMID>
  // the EXTCOMMs in the range must be consecutive
  optional string range = 3 [(gogoproto.customname) = "Range"];

  // ClaimLabels define the user defined labels and selector labels used
  // in resource claim
  optional .github.com.kuidio.kuid.apis.common.v1alpha1.ClaimLabels claimLabels = 4 [(gogoproto.customname) = "ClaimLabels", (gogoproto.nullable) = false];
}

// EXTCOMMClaimStatus defines the observed state of EXTCOMMClaim
message EXTCOMMClaimStatus {
  // ConditionedStatus provides the status of the IPClain using conditions
  // - a ready condition indicates the overall status of the resource
  optional .github.com.kuidio.kuid.apis.backend.as.v1alpha1.ConditionedStatus conditionedStatus = 1 [(gogoproto.customname) = "ConditionedStatus", (gogoproto.nullable) = false];

  // EXTCOMMID defines the EXTCOMM for the EXTCOMM claim
  // +optional
  optional uint64 id = 2 [(gogoproto.customname) = "ID"];

  // EXTCOMMRange defines the EXTCOMM range for the EXTCOMM claim
  // +optional
  optional string range = 3 [(gogoproto.customname) = "Range"];

  // ExpiryTime defines when the claim expires
  // +kubebuilder:validation:Optional
  // +optional
  optional string expiryTime = 4 [(gogoproto.customname) = "ExpiryTime"];
}

// +genclient
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
// +kubebuilder:object:root=true
// +kubebuilder:subresource:status
// +kubebuilder:resource:categories={kuid}
// EXTCOMMEntry is the Schema for the EXTCOMMentry API
message EXTCOMMEntry {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1 [(gogoproto.customname) = "ObjectMeta", (gogoproto.nullable) = false];

  optional EXTCOMMEntrySpec spec = 2 [(gogoproto.customname) = "Spec", (gogoproto.nullable) = false];

  optional EXTCOMMEntryStatus status = 3 [(gogoproto.customname) = "Status", (gogoproto.nullable) = false];
}

// EXTCOMMEntryList contains a list of EXTCOMMEntries
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
message EXTCOMMEntryList {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1 [(gogoproto.customname) = "ListMeta", (gogoproto.nullable) = false];

  repeated EXTCOMMEntry items = 2 [(gogoproto.customname) = "Items", (gogoproto.nullable) = false];
}

// EXTCOMMEntrySpec defines the dEXTCOMMred state of EXTCOMMEntry
message EXTCOMMEntrySpec {
  // EXTCOMMIndex defines the EXTCOMM index for the EXTCOMM Claim
  optional string index = 1 [(gogoproto.customname) = "Index", (gogoproto.nullable) = false];

  // IndexEntry identifies if the entry is originated from an IP Index
  optional bool indexEntry = 2 [(gogoproto.customname) = "IndexEntry", (gogoproto.nullable) = false];

  // ClaimType defines the claimType of the EXTCOMM Entry
  optional string claimType = 3 [(gogoproto.casttype) = "github.com/kuidio/kuid/apis/backend.ClaimType", (gogoproto.customname) = "ClaimType", (gogoproto.nullable) = false];

  // ID defines the id of the EXTCOMM entry in the tree
  optional string id = 4 [(gogoproto.customname) = "ID", (gogoproto.nullable) = false];

  // ClaimLabels define the user defined labels and selector labels used
  // in resource claim
  optional .github.com.kuidio.kuid.apis.common.v1alpha1.ClaimLabels claimLabels = 5 [(gogoproto.customname) = "ClaimLabels", (gogoproto.nullable) = false];

  // Claim defines the name of the claim that is the origin of this  entry
  optional string claim = 6 [(gogoproto.customname) = "Claim", (gogoproto.nullable) = false];
}

// EXTCOMMEntryStatus defines the observed state of EXTCOMMEntry
message EXTCOMMEntryStatus {
  // ConditionedStatus provides the status of the EXTCOMMEntry using conditions
  // - a ready condition indicates the overall status of the resource
  optional .github.com.kuidio.kuid.apis.backend.as.v1alpha1.ConditionedStatus conditionedStatus = 1 [(gogoproto.customname) = "ConditionedStatus", (gogoproto.nullable) = false];
}

// +genclient
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
// +kubebuilder:object:root=true
// +kubebuilder:subresource:status
// +kubebuilder:resource:categories={kuid}
// EXTCOMMIndex is the Schema for the EXTCOMMIndex API
message EXTCOMMIndex {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1 [(gogoproto.customname) = "ObjectMeta", (gogoproto.nullable) = false];

  optional EXTCOMMIndexSpec spec = 2 [(gogoproto.customname) = "Spec", (gogoproto.nullable) = false];

  optional EXTCOMMIndexStatus status = 3 [(gogoproto.customname) = "Status", (gogoproto.nullable) = false];
}

// EXTCOMMIndexList contains a list of EXTCOMMIndexs
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
message EXTCOMMIndexList {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1 [(gogoproto.customname) = "ListMeta", (gogoproto.nullable) = false];

  repeated EXTCOMMIndex items = 2 [(gogoproto.customname) = "Items", (gogoproto.nullable) = false];
}

// EXTCOMMIndexSpec defines the dEXTCOMMred state of EXTCOMMIndex
message EXTCOMMIndexSpec {
  // MinID defines the min EXTCOMM ID the index supports
  // +optional
  optional uint64 minID = 1 [(gogoproto.customname) = "MinID"];

  // MaxID defines the max EXTCOMM ID the index supports
  // +optional
  optional uint64 maxID = 2 [(gogoproto.customname) = "MaxID"];

  // UserDefinedLabels define metadata to the resource.
  // defined in the spec to distingiush metadata labels from user defined labels
  optional .github.com.kuidio.kuid.apis.common.v1alpha1.UserDefinedLabels userDefinedLabels = 3 [(gogoproto.customname) = "UserDefinedLabels", (gogoproto.nullable) = false];

  // Transitive defines the transative nature of the extended community
  optional bool transitive = 4 [(gogoproto.customname) = "Transitive", (gogoproto.nullable) = false];

  // Type defines the type of the extended community
  // 2byteAS, 4byteAS, ipv4Address, opaque
  optional string type = 5 [(gogoproto.customname) = "Type", (gogoproto.nullable) = false];

  // SubType defines the subTyoe of the extended community
  // routeTarget, routeOrigin;
  optional string subType = 6 [(gogoproto.customname) = "SubType", (gogoproto.nullable) = false];

  // GlobalID is interpreted dependeing on the type
  // AS in case of 2byteAS, 4byteAS
  // IPV4 addrress
  // irrelevant for the opaque type
  optional string globalID = 7 [(gogoproto.customname) = "GlobalID", (gogoproto.nullable) = false];
}

// EXTCOMMIndexStatus defines the observed state of EXTCOMMIndex
message EXTCOMMIndexStatus {
  // MinID defines the min EXTCOMM ID the index supports
  // +optional
  optional int64 minID = 1 [(gogoproto.customname) = "MinID"];

  // MaxID defines the max EXTCOMM ID the index supports
  // +optional
  optional int64 maxID = 2 [(gogoproto.customname) = "MaxID"];

  // ConditionedStatus provides the status of the EXTCOMMIndex using conditions
  // - a ready condition indicates the overall status of the resource
  optional .github.com.kuidio.kuid.apis.backend.as.v1alpha1.ConditionedStatus conditionedStatus = 3 [(gogoproto.customname) = "ConditionedStatus", (gogoproto.nullable) = false];
}

